2005-01-23  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (How the Linker is Chosen): Explain how the
	linker is chosen without diagram, and update to match the code.
	Suggestion from Adrian Bunk.

2005-01-16  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/am/subdirs.am ($(RECURSIVE_TARGETS), $(RECURSIVE_CLEAN_TARGETS)):
	Process all words of $MAKEFLAGS when checking for -k.
	* tests/check4.test: New file.
	* tests/Makefile.am (TESTS): Add check4.test.
	Report from Eric Blake.

2005-01-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/amversion.in (AM_AUTOMAKE_VERSION): Point users to
	AM_INIT_AUTOMAKE if the version passed is incorrect.
	* tests/version8.test: New file.
	* tests/Makefile.am (TESTS): Add version8.test.

2005-01-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/amversion.in, m4/as.m4, m4/auxdir.m4, m4/ccstdc.m4,
	m4/cond.m4, m4/depend.m4, m4/depout.m4, m4/dmalloc.m4, m4/gcj.m4,
	m4/header.m4, m4/init.m4, m4/install-sh.m4, m4/lead-dot.m4,
	m4/lex.m4, m4/lispdir.m4, m4/maintainer.m4, m4/make.m4,
	m4/minuso.m4, m4/missing.m4, m4/mkdirp.m4, m4/multi.m4,
	m4/obsol-gt.m4, m4/obsol-lt.m4, m4/obsolete.m4, m4/options.m4,
	m4/protos.m4, m4/python.m4, m4/regex.m4, m4/runlog.m4,
	m4/sanity.m4, m4/strip.m4, m4/tar.m4: Use the same all-permissive
	license that is used in aclocal.m4.  Relicensing backed by RMS.

	* doc/automake.texi (A Library, LIBOBJS): Mention that empty
	libraries are not portable.

2005-01-05  Akim Demaille  <akim@epita.fr>

	* aclocal.in ($ac_defun_rx): Match AU_ALIAS.
	* tests/aclocal5.test (MORE_DEFS): Rename as...
	(AM_TEST): this so that undefined macros are caught.
	And make it an alias of AC_SUBST.
	Test AU_ALIAS.
	Reported by Martin Bravenboer.

2005-01-03  Alexandre Duret-Lutz  <adl@gnu.org>

	Fix handling of per-target flags in link rules.
	* automake.in (define_per_target_linker_variable): New function.
	(handle_programs, handle_ltlibraries): Use it.
	(%link_languages): New map.
	(register_language): Fill it.