@@ -1,3 +1,11 @@
+2005-01-24  Akim Demaille  <akim@epita.fr>
+
+	* lib/Automake/FileUtils.pm: Rename filename as file_name to be
+	consistent with the terminology of the GNU coding standards.
+	From Paul Eggert.
+	(update_file): Accept a $force argument, so that --force always
+	updates the time stamps.
+
 2005-01-23  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* doc/automake.texi (How the Linker is Chosen): Explain how the
